--- a/package.json
+++ b/package.json
@@ -21,19 +21,26 @@
     "@angular/platform-browser": "^5.0.0",
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
+    "angular-datatables": "^5.0.0",
     "animate.css": "^3.5.2",
     "core-js": "^2.4.1",
+    "datatables.net": "^1.10.16",
+    "datatables.net-dt": "^1.10.16",
+    "jquery": "^3.2.1",
     "rxjs": "^5.5.2",
     "sweetalert": "^2.1.0",
     "sweetalert2": "^7.3.1",
+    "underscore": "^1.8.3",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
     "@angular/cli": "1.6.3",
     "@angular/compiler-cli": "^5.0.0",
     "@angular/language-service": "^5.0.0",
+    "@types/datatables.net": "^1.10.8",
     "@types/jasmine": "~2.8.3",
     "@types/jasminewd2": "~2.0.2",
+    "@types/jquery": "^3.2.17",
     "@types/node": "~8.5.2",
     "codelyzer": "^4.0.1",
     "jasmine-core": "~2.8.0",
